# pydantic-zod-codegen

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: edge-cases.md
src/pydantic_zod_codegen/: __init__.py  cli.py  custom_schema.py  drift.py  emitter.py  hand_emitter.py  post_processor.py  pre_processor.py
tests/: conftest.py  test_custom_schema.py  test_drift.py  test_emitter.py  test_literal_aliases.py  test_post_processor.py  test_round_trip.py
tests/goldenfile/expected/: protocol.gen.ts
tests/goldenfile/fixtures/: models.py
